// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/AssignTeamPopover renders and passes props correctly: popover props 1`] = `
Object {
  "children": Array [
    <PopoverHeader
      tag="h3"
    >
      Select Teams to Assign
    </PopoverHeader>,
    <PopoverBody
      tag="div"
    >
      <p>
        No teams loaded...
      </p>
    </PopoverBody>,
  ],
  "isOpen": true,
  "onClick": [Function],
  "placement": "right",
  "placementPrefix": "bs-popover",
  "style": Object {
    "minWidth": "16rem",
  },
  "target": "plan-assignment-outpost-number-one",
  "toggle": [Function],
  "trigger": "click",
}
`;

exports[`/components/AssignTeamPopover renders correctly when organizationsById is not null: button clear props 1`] = `
Object {
  "children": "Clear",
  "color": "default",
  "onClick": [MockFunction],
  "outline": true,
  "size": "xs",
  "tag": "button",
}
`;

exports[`/components/AssignTeamPopover renders correctly when organizationsById is not null: button save props 1`] = `
Object {
  "children": "Save",
  "color": "primary",
  "onClick": [MockFunction],
  "size": "xs",
  "tag": "button",
}
`;

exports[`/components/AssignTeamPopover renders correctly when organizationsById is not null: organization select props 1`] = `
Object {
  "assignments": Array [],
  "fetchAssignmentsAction": [Function],
  "fetchOrganizationsAction": [Function],
  "jurisdictionId": "outpost-number-one",
  "name": "plan-assignment-form-outpost-number-one",
  "organizations": Array [],
  "parentAssignments": undefined,
  "parentIds": undefined,
  "planId": "alpha",
  "resetPlanAssignmentsAction": [Function],
  "serviceClass": [Function],
  "value": Array [],
}
`;

exports[`/components/AssignTeamPopover renders correctly with parent assignments present: organization select props with parent assignments 1`] = `
Object {
  "assignments": Array [],
  "fetchAssignmentsAction": [Function],
  "fetchOrganizationsAction": [Function],
  "jurisdictionId": "outpost-number-one",
  "name": "plan-assignment-form-outpost-number-one",
  "organizations": Array [],
  "parentAssignments": Array [
    "tucker",
    "caboose",
  ],
  "parentIds": Array [
    "blue-base",
  ],
  "planId": "alpha",
  "resetPlanAssignmentsAction": [Function],
  "serviceClass": [Function],
  "value": Array [],
}
`;
